# topos

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  vulture_whitelist.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/lib/react/components/layout/: footer.tsx  navbar.tsx
apps/web/src/lib/react/components/ui/: logo.tsx
apps/web/src/lib/react/components/views/landing/: ArchitectureSection.tsx  CTASection.tsx  HeroSection.tsx
docker/: Dockerfile.init  agent-config.yaml  init-dev.py
docker/samba/: smb.conf
docker/samples/contracts/: acme-msa-2024.txt  vendor-nda-2024.txt
docker/samples/policies/: acceptable-use-policy.txt  data-classification-policy.txt
docker/samples/rfcs/: rfc-001-kubernetes-migration.txt  rfc-002-api-versioning.txt
docs/: ARCHITECTURE.md
landing_page/: index.html
strata/: pyproject.toml
strata/alembic/: env.py
strata/alembic/versions/: 001_initial_schema.py  002_semantic_features.py
strata/app/: models.py  schemas.py
strata/app/api/: admin.py  ingest.py  query.py
strata/app/services/: classification.py  exposure.py  extraction.py  observability.py  policy_engine.py  semantic_diff.py  semantic_extraction.py  sensitivity.py
strata/app/workers/: base.py  enrichment.py  extraction.py  runner.py  semantics.py
strata_agent/: pyproject.toml
strata_agent/strata_agent/: client.py  config.py  main.py  scanner.py
