[project]
name = "strata-backend"
version = "0.1.0"
description = "Strata v0 - AI data plane for enterprise file systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
    "httpx>=0.25.0",
    # Content extraction
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    # Optional: embeddings
    "openai>=1.3.0",
    # pgvector
    "pgvector>=0.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "vulture>=2.13",
    "bandit[toml]>=1.7.0",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Tooling config inherited from root pyproject.toml
